Fix background color of routine text view in dark mode

--- a/crates/web-app-dioxus/assets/main.scss
+++ b/crates/web-app-dioxus/assets/main.scss
@@ -234,6 +234,10 @@ div.is-calendar {
     background-color: var(--bulma-scheme-main);
 }
 
+.message-body pre {
+    background-color: var(--bulma-scheme-main);
+}
+
 .has-background-auto-text-95 {
     background-color: var(--bulma-text-95);
 }
